--- a/Practice/App/Code/app/src/main/AndroidManifest.xml
+++ b/Practice/App/Code/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:theme="@style/Theme.AmiiboApp"
         tools:targetApi="31">
         <activity
+            android:name=".AboutUsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AmiiboInfoActiviy"
             android:exported="false">
             <meta-data
